# tutorial-learning-web-development-with-django

./: .bumpversion.cfg  .envrc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
src/: Untitled.ipynb  admin.py  base.html  manage.py
src/book_management/: forms.py  models.py  urls.py  views.py
src/book_management/migrations/: 0001_initial.py
src/book_management/templates/: book_delete_form.html  book_detail.html  book_form.html
src/bookr/: apps.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
src/bookr_admin/: admin.py
src/business_site/: manage.py
src/business_site/business_site/: asgi.py  settings.py  urls.py  wsgi.py
src/business_site/templates/: index.html
src/form_project/form_example/: forms.py  views.py
src/form_project/form_example/templates/: form-example.html
src/form_project/form_project/: asgi.py  settings.py  urls.py  wsgi.py
src/myproject/: asgi.py  settings.py  urls.py  wsgi.py
src/reviews/: admin.py  api_views.py  forms.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
src/reviews/management/commands/: loadcsv.py
src/reviews/migrations/: 0001_initial.py  0002_book_contributor_review_bookcontributor_and_more.py  0003_book_cover_book_sample.py
src/reviews/templates/: base.html  book_search.html
src/reviews/templates/reviews/: base.html  book_detail.html  book_list.html  books_list.html  index.html  instance-form.html  search-results.html
src/reviews/templatetags/: profile_tags.py
src/reviews/tests/: test_models.py  test_views.py
src/static/: react-example.js  recent-reviews.js
src/templates/: base.html  form-example.html  profile.html  react-example.html
src/templates/admin/: admin_profile.html  logout.html
src/templates/registration/: login.html  password_change_form.html
